--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -20,6 +20,11 @@
         android:background="@drawable/gradient"
         android:alpha="0.9"
         />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/splashMontania"
+        />
 <ImageView
     android:id="@+id/logoSplash"
     android:layout_width="200dp"
@@ -34,6 +39,7 @@ app:layout_constraintTop_toTopOf="@id/splashGLH1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
+        android:textSize="40dp"
         app:layout_constraintTop_toBottomOf="@id/logoSplash"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
